# Co2H-C2

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD-PARTY-LICENSES  TODO.txt  build-arm.sh  build-linux.sh  build-macos.sh  build-windows.ps1
beacon/: CMakeLists.txt
beacon-linux/: CMakeLists.txt
beacon-linux/commands/: cmd_fs.c  cmd_ishell.c  cmd_pivot.c  cmd_portscan.c  cmd_privesc.c  cmd_privesc2.c  cmd_ps.c  cmd_relay.c  cmd_rportfwd.c  cmd_screenshot.c  cmd_shell.c  cmd_sys.c  copyfail.c
beacon-linux/core/: alloc.c  beacon.h  crypto_openssl.c  main.c  metadata.c  tasking.c  transport.c
beacon-linux/transports/dns/: transport_dns.c
beacon-linux/transports/https/: transport_https.c
beacon-linux/transports/tcp/: transport_tcp.c
beacon/bof/: bof_call.asm  bof_call_x86.asm  bof_loader.c
beacon/commands/: cmd_adcs_enum.c  cmd_creds.c  cmd_dcsync.c  cmd_edge_creds.c  cmd_execasm.c  cmd_fs.c  cmd_inject.c  cmd_inject_dll.c  cmd_ishell.c  cmd_kerberoast.c  cmd_keylogger.c  cmd_lateral.c  cmd_ldap_relay.c  cmd_modulestomp.c  cmd_persist.c  cmd_pivot.c  cmd_portfwd.c  cmd_portscan.c  cmd_privesc.c  cmd_privesc_plasma.c  cmd_ps.c  cmd_relay.c  cmd_rportfwd.c  cmd_screenshot.c  cmd_shell.c  cmd_socks.c  cmd_stager.c  cmd_sys.c  cmd_token.c  drsuapi.h  drsuapi.idl  drsuapi_c.c  efsr.h  efsr.idl  efsr_c.c  hashdump2.c  rprn.h  rprn.idl  rprn_c.c
beacon/core/: alloc.c  beacon.h  crypto_bcrypt.c  entry.c  main.c  metadata.c  rt.c  tasking.c  transport.c
beacon/loader/: exe_entry.c  injector.c  loader.c  loader.h  migrate.c  migrate.h
beacon/opsec/: antidbg.c  api_hash.c  etw_amsi.c  process_inject_kit.c  sleepmask_ekko.c  stack_spoof.c  syscall_stubs.asm  syscalls.c
beacon/pocs/: MiniPlasma.c
beacon/transports/dns/: transport_dns.c
beacon/transports/https/: transport_https.c
beacon/transports/smb/: transport_smb.c
beacon/transports/tcp/: transport_tcp.c
bof/: build-stand.ps1  scenarios.txt  scenarios_tactical.txt  shell_examples_final.txt
bof/Co2H-bof/: beacon.h  bof_bind_shell.c  bof_bypass_computerdefaults.c  bof_bypass_eventvwr.c  bof_bypass_fodhelper.c  bof_bypass_sdclt.c  bof_bypass_slui.c  bof_clipboard.c  bof_enum_processes.c  bof_find_files.c  bof_hello.c  bof_ldap_recon.c  bof_netstat.c  bof_password_spray.c  bof_persistence_run.c  bof_reverse_shell.c  bof_stager_template.c  bof_steal_token.c  bof_whoami.c
bof/shellcode/: sc_bind_shell.c  sc_reverse_shell.c
bof/stagers/: make_iso.ps1  make_lnk.ps1  stager.hta
certs/: ca.srl
client/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
client/models/: AuditModel.cpp  AuditModel.hpp  CredentialsModel.cpp  CredentialsModel.hpp  DownloadsModel.cpp  DownloadsModel.hpp  ListenersModel.cpp  ListenersModel.hpp  SessionsModel.cpp  SessionsModel.hpp
client/net/: ServerClient.cpp  ServerClient.hpp
client/plugin/: IClientPlugin.hpp  PluginContext.cpp  PluginContext.hpp  PluginManager.cpp  PluginManager.hpp
client/resources/: client.rc  resources.qrc
client/resources/themes/: dark.qss  light.qss
client/script/: ScriptEngine.cpp  ScriptEngine.hpp
client/scripts/: example_auto_enum.lua.example
client/ui/: AuditView.cpp  AuditView.hpp  ChatView.cpp  ChatView.hpp  ConsoleWidget.cpp  ConsoleWidget.hpp  CredentialsView.cpp  CredentialsView.hpp  DownloadsView.cpp  DownloadsView.hpp  FileBrowserView.cpp  FileBrowserView.hpp  GraphView.cpp  GraphView.hpp  ListenersView.cpp  ListenersView.hpp  LoginDialog.cpp  LoginDialog.hpp  MainWindow.cpp  MainWindow.hpp  ProcessBrowserView.cpp  ProcessBrowserView.hpp  ScriptsView.cpp  ScriptsView.hpp  SessionsView.cpp  SessionsView.hpp  SvgIcon.cpp  SvgIcon.hpp  Theme.cpp  Theme.hpp
common/: CMakeLists.txt
common/co2h/: bytes.hpp  crypto.cpp  crypto.hpp  framing.cpp  framing.hpp  kv.cpp  kv.hpp  proto.cpp  proto.hpp  version.hpp
configs/: srv.toml
docs/chm/: README.txt  artifact-gen.html  artifact-kit.html  build-chm.cmd  build-chm.ps1  co2h.chm  co2h.hhc  co2h.hhk  co2h.hhp  commands-linux.html  (+13 more)
kit/: extract_section.py  x86_helpers.c
kit/artifact/exe_basic/: CMakeLists.txt  exe_basic.c
kit/utils/scelot/loader/: CMakeLists.txt  entry.c  hash.h  map_pe.c  map_pe.h  peb.h  prologue_x64.asm  prologue_x86.asm
plugins/example/: CMakeLists.txt  ExamplePlugin.cpp
plugins/screenshot_gallery/: CMakeLists.txt  ScreenshotGalleryPlugin.cpp
profiles/: default.toml  gcs.toml  msgraph.toml
scripts/: gen-certs.ps1  gen-certs.sh  install-deps.ps1  install-deps.sh  smb-diag.ps1
sdk/example/: CMakeLists.txt  ExamplePlugin.cpp
server/: CMakeLists.txt  Config.cpp  Config.hpp  Core.cpp  Core.hpp  main.cpp  server.rc
server/auth/: OperatorAuth.cpp  OperatorAuth.hpp
server/core/: ListenerManager.cpp  ListenerManager.hpp  SessionRegistry.cpp  SessionRegistry.hpp  TaskQueue.cpp  TaskQueue.hpp
server/db/: Database.cpp  Database.hpp
server/listeners/dns/: DnsListener.cpp  DnsListener.hpp
server/listeners/https/: BeaconCrypto.cpp  BeaconCrypto.hpp  HttpsListener.cpp  HttpsListener.hpp  MalleableProfile.cpp  MalleableProfile.hpp  RsaOaep.cpp  RsaOaep.hpp
server/listeners/pivot/: PivotListener.cpp  PivotListener.hpp
server/listeners/rportfwd/: RportfwdListener.cpp  RportfwdListener.hpp
server/listeners/smb/: SmbListener.cpp  SmbListener.hpp
server/listeners/socks5/: Socks5Listener.cpp  Socks5Listener.hpp
server/listeners/tcp/: TcpListener.cpp  TcpListener.hpp
server/net/: OperatorAcceptor.cpp  OperatorAcceptor.hpp  OperatorSession.cpp  OperatorSession.hpp
tools/artifact-gen/: CMakeLists.txt  PatchBeacon.cpp  PatchBeacon.hpp  Wrappers.cpp  Wrappers.hpp  artifact-gen.rc  main.cpp
tools/scelot/: CMakeLists.txt  README.md  build.cmd  scelot.rc
tools/scelot/generator/: aes.h  main.c  pe_parser.c  pe_parser.h  poly.h  rng.c  rng.h
tools/scelot/gui/: build.cmd
tools/scelot/loader/: host_clr.c  host_clr.h  order.txt  peb.c  placeholders.c
tools/scelot/tests/: CMakeLists.txt  run_tests.cmd
tools/scelot/tests/payloads/hello_msg/: hello_msg.c
tools/scelot/tests/payloads/net_hello/: NetHello.cs  _build.cmd  build.cmd
(+130 files in other folders)
